--- a/zxing/src/main/res/layout/activity_scan.xml
+++ b/zxing/src/main/res/layout/activity_scan.xml
@@ -46,7 +46,7 @@
                 android:layout_alignParentTop="true"
                 android:textColor="@android:color/white"
                 android:gravity="center"
-                android:text="请扫描视频二维码"
+                android:text=""
                 android:textSize="20sp"
                 android:background="@mipmap/shadow" />
 
