刷新布局添加

--- a/basetool/src/main/res/values/styles.xml
+++ b/basetool/src/main/res/values/styles.xml
@@ -77,4 +77,13 @@
             <enum name="right" value="1"/>
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="PullRefreshLayout">
+        <attr name="refreshMode">
+            <flag name="disabled" value="0x0" />
+            <flag name="pullFromStart" value="0x1" />
+            <flag name="pullFromEnd" value="0x2" />
+            <flag name="both" value="0x3" />
+        </attr>
+    </declare-styleable>
 </resources>
