--- a/ijkplayer/src/main/res/values/styles.xml
+++ b/ijkplayer/src/main/res/values/styles.xml
@@ -2,13 +2,13 @@
 <resources>
     <!-- 自定义电量进度条 -->
     <style name="ProgressBarBattery" parent="@android:style/Widget.ProgressBar.Horizontal">
-        <item name="android:layout_width">72px</item>
-        <item name="android:layout_height">43px</item>
+        <item name="android:layout_width">36dp</item>
+        <item name="android:layout_height">20dp</item>
         <item name="android:background">@mipmap/ic_battery</item>
-        <item name="android:paddingTop">6px</item>
-        <item name="android:paddingBottom">6px</item>
-        <item name="android:paddingLeft">6px</item>
-        <item name="android:paddingRight">10px</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">5dp</item>
         <item name="android:indeterminateOnly">false</item>
         <item name="android:indeterminateDrawable">@android:drawable/progress_indeterminate_horizontal</item>
         <item name="android:progressDrawable">@drawable/layer_battery_progress</item>
