--- a/ijkplayer/src/main/res/values/dimens.xml
+++ b/ijkplayer/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="control_bar_height">46dp</dimen>
-    <dimen name="settings_btn_width">44dp</dimen>
-    <dimen name="aspect_btn_height">20dp</dimen>
-    <dimen name="aspect_btn_size">30dp</dimen>
-    <dimen name="title_text">14sp</dimen>s
+    <dimen name="control_bar_height">90px</dimen>
+    <dimen name="settings_btn_width">88px</dimen>
+    <dimen name="aspect_btn_height">40px</dimen>
+    <dimen name="aspect_btn_size">60px</dimen>
+    <dimen name="title_text">28px</dimen>
+    <dimen name="normal_text">24px</dimen>
 </resources>
