--- a/ijkplayer/src/main/res/layout/layout_touch_gestures.xml
+++ b/ijkplayer/src/main/res/layout/layout_touch_gestures.xml
@@ -8,8 +8,8 @@
         android:layout_gravity="center"
         android:background="@drawable/shape_video_bg"
         android:visibility="gone"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_width="160px"
+        android:layout_height="160px">
 
         <!-- 声音 -->
         <TextView
