--- a/ijkplayer/src/main/res/layout/layout_bottom_bar.xml
+++ b/ijkplayer/src/main/res/layout/layout_bottom_bar.xml
@@ -38,9 +38,10 @@
         android:id="@+id/ll_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="80px"
+        android:background="@color/bg_video_view"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv_play"
