--- a/ijkplayer/src/main/res/layout/layout_top_bar.xml
+++ b/ijkplayer/src/main/res/layout/layout_top_bar.xml
@@ -69,7 +69,10 @@
         android:id="@+id/window_top_bar"
         android:gravity="center_vertical"
         android:layout_marginTop="10px"
-        android:layout_width="wrap_content"
+        android:paddingTop="10px"
+        android:paddingBottom="10px"
+        android:layout_width="match_parent"
+        android:background="@color/bg_video_view"
         android:layout_height="wrap_content"
         android:visibility="gone">
 
