--- a/ijkplayer/src/main/res/values/styles.xml
+++ b/ijkplayer/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
 
     <!-- 屏幕宽高比选项 -->
     <style name="AspectRatioButton">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">@dimen/aspect_btn_size</item>
         <item name="android:layout_height">@dimen/aspect_btn_height</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:button">@null</item>
