--- a/basetool/src/main/res/layout/layout_pull_down_refreshing.xml
+++ b/basetool/src/main/res/layout/layout_pull_down_refreshing.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/f8"
@@ -43,4 +43,4 @@
             android:textColor="@color/text_666"
             android:textSize="@dimen/px_24"/>
     </LinearLayout>
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
