--- a/basetool/src/main/res/layout/layout_pull_up_loading.xml
+++ b/basetool/src/main/res/layout/layout_pull_up_loading.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/f8"
@@ -21,4 +21,4 @@
         android:text="@string/pull_up_load_label"
         android:textColor="@color/text_666"
         android:textSize="@dimen/px_24" />
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
