--- a/basetool/src/main/res/values/colors.xml
+++ b/basetool/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="text_333"> #333</color>
     <color name="text_666"> #666</color>
     <color name="text_999"> #999</color>
-    <color name="color_main">#FF920B</color>
-    <color name="color_main_trans">#66FF920B</color>
+    <color name="color_main">#3DBBEF</color>
+    <color name="color_main_trans">#663DBBEF</color>
     <color name="line_ccc">#ccc</color>
     <color name="ec">#ececec</color>
     <color name="f8">#f8f8f8</color>
