--- a/basetool/src/main/res/values/styles.xml
+++ b/basetool/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
     <style name="style_divide">
         <item name="android:layout_height">@dimen/px_1</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:background">@color/ec</item>
+        <item name="android:background">@color/line_ccc</item>
     </style>
 
     <!-- 底部动画显示界面 -->
